<resources>
    <string name="app_name">Shop Finderr</string>
    <string name="signIn">Sign in to your account</string>
    <string name="view_near">View shops near you</string>
    <string name="new_offers">Find new offers </string>
    <string name="track">Track the location of shops</string>
    <string name="already">Already a customer? Sign in</string>
    <string name="create">New to ShopFinder? Create an account</string>
    <string name="username">user name</string>
    <string name="home_nav">Home</string>
    <string name="shop_nav">Shop by category</string>
    <string name="shop_nears_nav">Shops near you</string>
    <string name="range_nav">Set range</string>
    <string name="wish_nav">Wish List</string>
    <string name="language">Language</string>
    <string name="Settings">Settings</string>
    <string name="Help">Help</string>
    <string name="logout">Logout</string>
    <string name="skip">Skip sign up</string>
    <string name="hindi">Change language to hindi?</string>
    <string name="productName">Product Name</string>
    <string name="productDescription">Product Description</string>
    <string name="productprice">Product Price</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- For login Interface -->
    <string name="sign_out">sign out</string>
    <string name="positive_say">Yes</string>
    <string name="negative_say">No</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="sign_in_cancelled">Sign In Cancelled</string>

</resources>
